# attrfl

./: .gitignore  README.md  README_CN.md
demo/: CMakeLists.txt  main.cpp
demo/Serialization/include/: JsonDataReader.h  JsonDataWriter.h
demo/Serialization/src/: JsonDataReader.cpp  JsonDataWriter.cpp
demo/libA/include/: Animal.h  UnusedClass.h
demo/libB/include/: Dog.h
demo/libB/src/: Dog.cpp
demo/libC/include/: BaseSO.h  MySO.h
demo/libC/src/: BaseSO.cpp  MySO.cpp
runtime/cmake/: Attrfl.cmake
runtime/include/: Reflection.h  Serialization.h
runtime/include/Reflection/: AttributeInfo.h  ContainerTraits.h  FieldInfo.h  Type.h  TypeInfo.h
runtime/include/Serialization/: DataReader.h  DataWriter.h
runtime/src/: Reflection.cpp  Serialization.cpp
tool/: CMakeLists.txt  main.cpp
tool/include/: BaseTypeRegister.h  ClassInfo.h  ClassesRegister.h  CollectClasses.h  Generate.h  Generic.h
tool/include/Attributes/: AttributeBase.h  AttributeRegistry.h  ClassFinalReflectableAttribute.h  ClassFinalSerializableAttribute.h  ClassReflectableAttribute.h  ClassSerializableAttribute.h  NoReflectableAttribute.h  NoSerializableAttribute.h  ReflectableAttribute.h  SerializableAttribute.h
